Change the content of vadintor's file

--- a/_posts/0000-01-02-vadintor.md
+++ b/_posts/0000-01-02-vadintor.md
@@ -2,5 +2,8 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
-Use the left arrow to go back!
+# Vadintor's file
+## Introduction
+This is great!
+## Summary
+This was great!
